--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-RLA.html">Agent Polyvalent restauration</a></td>
+                <td align="center"><a href="agent-de-restauration.html">Agent Polyvalent restauration</a></td>
             </tr>
         </table>
 <!-- SECTION BLANCHE (Président OLDEC)-->
@@ -85,7 +85,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-RLA.html">Président d'un Réseau étudiant</a></td>
+                <td align="center"><a href="oldec.html">Président d'un Réseau étudiant</a></td>
             </tr>
         </table>
 
@@ -97,7 +97,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-RLA.html">Technicien SIG "Gendarmerie de Cocody"</a></td>
+                <td align="center"><a href="satge-gendarmerie.html">Technicien SIG "Gendarmerie de Cocody"</a></td>
             </tr>
        </table>
   <!-- SECTION BLANCHE (Mairie cocody)-->
@@ -108,7 +108,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="portfolio-RLA.html">Technicien SIG Mairie de Cocody "Bénévole"</a></td>
+                <td align="center"><a href="stage-marie-de-cocody.html">Technicien SIG Mairie de Cocody "Bénévole"</a></td>
             </tr>
         </table>
 
