--- a/satge-gendarmerie.html
+++ b/satge-gendarmerie.html
@@ -15,7 +15,7 @@
     </div>
     <a class="contact-button" 
     style="position: absolute;right: 20px;top: 5px;"
-    href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
+    href="Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
 </div>
 <!-- section grise titre-->
 <div class="section section-grise1" style="padding-top: 20px;">
@@ -48,7 +48,7 @@
         où chaque tâche a son importance et où la coordination entre les équipes est essentielle.
      </p>
      <div style="text-align: center;margin-top: 20px;">
-             <img class="portfolio-rla" src="force speciale.jpg">
+             <img class="portfolio-rla" src="Photo gendamerie cocody.jpg">
          </div>
     </div>
 <!-- Frame-->
@@ -65,7 +65,7 @@
                         <p>
                             Besoin de discuter de votre projet ?
                             <br><br>
-                            <a href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
+                            <a href="Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
                             par téléphone au <a href="tel:+33612345678">06 47 99 10 58</a>
 
                         </p>
