--- a/stage-marie-de-cocody.html
+++ b/stage-marie-de-cocody.html
@@ -15,7 +15,7 @@
         </div>
         <a class="contact-button" 
         style="position: absolute;right: 20px;top: 5px;"
-        href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
+        href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
     </div>
     <!-- section grise titre-->
     <div class="section section-grise1" style="padding-top: 20px;">
@@ -61,7 +61,7 @@
                             <p>
                                 Besoin de discuter de votre projet ?
                                 <br><br>
-                                <a href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
+                                <a href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
                                 par téléphone au <a href="tel:+33612345678">06 47 99 10 58</a>
     
                             </p>
