--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p>Géomaticien | Profil Junior</p>
         
         <div style="text-align: center;">
-            <a class="contact-button" href="Yaokonan143@gmail.com?subject=Contact%20depuis%20mon site web">ME CONTACTER</a>
+            <a class="contact-button" href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20mon%20site%20web">ME CONTACTER</a>
         </div>
         <div class="cover-contact">
-            <p><a href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20mon site web">Yaokonan143@gmail.com</a></p>
+            <p><a href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20mon%20site%20web">Yaokonan143@gmail.com</a></p>
             <p><a href="tel:+33647991058"> 06 47 99 10 58</a></p>
         </div>
     </div>
@@ -128,7 +128,7 @@
                             <p>
                                 Besoin de discuter de votre projet ?
                                 <br><br>
-                                <a href="mailto:mon_email@gmail.com?subject=Contact%20depuis%20mon site web">Contactez moi par email</a> ou directement
+                                <a href="mailto:Yaokonan143@.com?subject=Contact%20depuis%20mon%20%siteweb">Contactez moi par email</a> ou directement
                                 par téléphone au <a href="tel:+33612345678">06 47 99 10 58</a>
 
                             </p>
