--- a/satge-gendarmerie.html
+++ b/satge-gendarmerie.html
@@ -15,7 +15,7 @@
     </div>
     <a class="contact-button" 
     style="position: absolute;right: 20px;top: 5px;"
-    href="Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
+    href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20mon%20site%20web">ME CONTACTER</a>
 </div>
 <!-- section grise titre-->
 <div class="section section-grise1" style="padding-top: 20px;">
@@ -65,7 +65,7 @@
                         <p>
                             Besoin de discuter de votre projet ?
                             <br><br>
-                            <a href="Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
+                            <a href="mailto:Yaokonan143@.com?subject=Contact%20depuis%20mon%20site%20web">Contactez moi par email</a> ou directement
                             par téléphone au <a href="tel:+33612345678">06 47 99 10 58</a>
 
                         </p>
