--- a/stage-marie-de-cocody.html
+++ b/stage-marie-de-cocody.html
@@ -15,7 +15,7 @@
         </div>
         <a class="contact-button" 
         style="position: absolute;right: 20px;top: 5px;"
-        href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">ME CONTACTER</a>
+        href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20mon%20site%20web">ME CONTACTER</a>
     </div>
     <!-- section grise titre-->
     <div class="section section-grise1" style="padding-top: 20px;">
@@ -44,7 +44,7 @@
              <br><br>
          </p>
          <div style="text-align: center;margin-top: 20px;">
-                 <img class="portfolio-rla" src="Mairie_de_Cocody.jpg">
+                 <img class="portfolio-rla" src="photo Marie cocody.jpg">
              </div>
         </div>
     <!-- Frame-->
@@ -61,7 +61,7 @@
                             <p>
                                 Besoin de discuter de votre projet ?
                                 <br><br>
-                                <a href="mailto:Yaokonan143@gmail.com?subject=Contact%20depuis%20jonathanroux.com">Contactez moi par email</a> ou directement
+                                <a href="mailto:Yaokonan143@.com?subject=Contact%20depuis%20mon%20site%20web">Contactez moi par email</a> ou directement
                                 par téléphone au <a href="tel:+33612345678">06 47 99 10 58</a>
     
                             </p>
